# r-auth

./: .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  README.md  flake.nix  result
.github/workflows/: release.yml
src/: authenticator.rs  crypto.rs  error.rs  main.rs  totp.rs
